--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Daiki02100729" target="_blank">Daiki</a>.
   </div>
 </body>
 
